# rooftop-classifier

./: README.md  pyproject.toml
src/roof_classifier/: dataset.py  dataset.yaml  model.py  train.py  transforms.py  utils.py
