[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "roof_classifier"
version = "0.0.1"
authors = [
  { name="Jordan Guerguiev", email="jordan.guerguiev@me.com" },
]
description = "Roof classifier"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]