[build-system]
requires = [
  "setuptools>=61.0",
  "torch>=1.12",
  "torchvision>=0.13",
  "opencv-python>=4.6",
  "torchsummary>=1.5",
  "numpy>=1.23",
  "Pillow>=9.2",
  "PyYAML>=6.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "roof_classifier"
version = "0.0.1"
authors = [
  { name="Jordan Guerguiev", email="jordan.guerguiev@me.com" },
]
description = "Roof classifier"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]